Editor reskin: wide mode toolbar license text is too low (BugId:5330)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@40939 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/EditPageLayout/css/core/toolbar.scss
+++ b/extensions/wikia/EditPageLayout/css/core/toolbar.scss
@@ -69,12 +69,16 @@
 			padding: 0 5px 0 0;
 		}
 		> .right {
-			float: right;
 			clear: right;
+			float: right;
+			height: 42px;
 			width: 220px;
 			> span {
 				display: inline-block;
 			}
+		}
+		.cke_license {
+			line-height: 12px;
 		}
 	}
 
